[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "titato"
version = "1.0.0"
authors = [
  { name="Steppe-Mammoth", email="qwqwqww404@gmail.com" },


]
description = "Library of the game tic-tac-toe + AI. Experimental functionality with dynamic parameters of the game field"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",

]
keywords = [
    "tic-tac-toe",
    "game",
    "api",
    "framework",
]

dependencies = ["prettytable ~= 3.6.0"]


[project.urls]
Documentation = "https://github.com/Steppe-Mammoth/tictaco#readme"
Source =  "https://github.com/Steppe-Mammoth/tictaco"
Issues = "https://github.com/Steppe-Mammoth/tictaco/issues"

[tool.hatch.envs.default]
    dependencies = ["prettytable ~= 3.6.0"]

[[tool.hatch.envs.test.matrix]]
python = ["310", "311"]

[tool.ruff]
src = ["titato", "tests"]
exclude = [
    ".git",
    ".idea",
    "build",
    "dist",
    "venv",
    "venv10",
    ".venv",
    "tests",
    "dev",
    ".pytest_cahce",
]
